thecut/media/static/media/admin.css
/* ... */
      
      .media-attachedmediaitems .media-content_type_list li.active:after {
        position: absolute;
        bottom: 0;
        left: 50%;
        margin: 0 0 -10px -10px;
        border-left: solid 10px transparent;
        border-right: solid 10px transparent;
        border-top: solid 10px #01acf1;
        content: ' ';
      }

.media-attachedmediaitems .inline-related, .media-attachedmediaitems .add-row {
  display: none;
}

.media-attachedmediaitems .media-object_list {
  margin: 0 0 20px -20px;
  padding: 0;
}




/* Object List - Thumbnails */  
.media-attachedmediaitems .media-object_list li.thumbnail {
  position: relative;
  float: left;
  width: 140px;
  height: 106px;
  margin: 0 0 20px 20px;
  padding: 0;
  list-style-type: none;
  background-color: #e5e5e5;
}
  
  .media-attachedmediaitems .media-object_list li.thumbnail img {
    display: block;
    margin: 0 auto;
  }
  
  .media-attachedmediaitems .media-object_list li.thumbnail .action.remove {
    position: absolute;
    overflow: hidden;
    top: 3px;
    right: 3px;
    width: 13px;
    height: 13px;
    background-image: url("media-object_list-remove.png");
    text-indent: 20px;
  }

/* Object List - List */
.media-attachedmediaitems .media-object_list li.list {
  position: relative;
  min-height: 36px;
  margin: 0 0 0 20px;
  padding: 9px 0 10px 54px;
  list-style-type: none;
  background-position: 9px 9px;
  background-repeat: no-repeat;
  border-bottom: 1px solid #d7d7d7;
  font-size: 8px;
  line-height: 8px;
}
  
  .media-attachedmediaitems .media-object_list li.list.audio {
    background-image: url("media-object_list-audio.png");
  }
  
  .media-attachedmediaitems .media-object_list li.list.document {
    background-image: url("media-object_list-document.png");
  }
  
  .media-attachedmediaitems .media-object_list li.list .name {
    margin-bottom: 7px;
    color: #000000;
    font-weight: bold;
    text-transform: uppercase;
  }
  
  .media-attachedmediaitems .media-object_list li.list .content {
    margin-bottom: 4px;
  }
  
  .media-attachedmediaitems .media-object_list li.list .publish_at {
    color: #767676;
  }
  
  .media-attachedmediaitems .media-object_list li.list .action.remove {
    display: block;
    visibility: hidden;
    position: absolute;
    top: 50%;
    right: 0;
    height: 54px;
    margin: -4px 35px 0 0;
    display: block;
    color: #e6001b;
    font-weight: bold;
    text-transform: uppercase;
  }
  
  .media-attachedmediaitems .media-object_list li.list:hover .action.remove {
    visibility: visible;
  }




.media-attachedmediaitems .action.select {
  display: block;
  clear: both;
  float: left;
  padding: 0 22px 0 8px;
  background-color: #898989;
  background-image: url("media-select-plus.png");
  background-position: right center;
  background-repeat: no-repeat;
  color: #ffffff;
  font-size: 11px;
  font-weight: bold;
  line-height: 23px;
  text-transform: uppercase;
}







/* Picker */
.media-attachedmediaitems .ui-dialog-titlebar {
  display: none;
}

.media-attachedmediaitems.ui-dialog {
  padding: 0;
  border-style: solid 1px #000000;
  border-radius: 0;
  box-shadow: 1px 1px 5px #333;
  -moz-box-shadow: 1px 1px 5px #333;
  -webkit-box-shadow: 1px 1px 5px #333;
}


.media-attachedmediaitems .media-picker {
  padding: 0;
  font-size: 8px;
}


.media-attachedmediaitems .media-picker h2 {
  color: #01acf1;
  font-size: 10px;
  margin: 0 0 10px 0;
  padding: 0;
  text-transform: uppercase;
}

.media-attachedmediaitems .media-picker h3 {
  color: #898888;
  font-size: 10px;
  font-weight: normal;
}

.media-attachedmediaitems .media-picker .pagination {
  float: right;
}

.media-attachedmediaitems .media-picker .media-filter_objects,
.media-attachedmediaitems .media-picker .media-available_objects,
.media-attachedmediaitems .media-picker .media-selected_objects {
  height: 510px;
  overflow: auto;
  padding: 15px;
}

.media-attachedmediaitems .media-picker .media-filter_objects {
  float: left;
  width: 192px;
  background-color: #000000;
  color: #ffffff;
}

.media-attachedmediaitems .media-picker .media-available_objects {
  float: left;
  overflow: auto;
  width: 486px;
  background-color: #ffffff;
  color: #000000;
}

.media-attachedmediaitems .media-picker .media-selected_objects {
  float: right;
  overflow: auto;
  width: 192px;
  background-color: #e5e5e5;
}


.media-attachedmediaitems .media-picker .media-available_object_list,
.media-attachedmediaitems .media-picker .media-selected_object_list {
  margin: 0;
  padding: 0;
}
  
  .media-attachedmediaitems .media-picker .media-available_object_list li,
  .media-attachedmediaitems .media-picker .media-selected_object_list li {
    display: block;
    position: relative;
    height: 45px;
    margin: 0;
    padding: 9px 0 10px 80px;
    background-repeat: no-repeat;
    background-position: 0 9px;
    border-bottom: solid 1px #f1f1f1;
    list-style-type: none;
    font-size: 8px;
  }
    
    .media-attachedmediaitems .media-picker .media-available_object_list li.selected {
      -moz-opacity: 0.5;
      opacity: 0.5;
      filter: alpha(opacity = 50);
    }
      
      .media-attachedmediaitems .media-picker .media-available_object_list li.selected img {
        filter: alpha(opacity = 50);
      }
    
    .media-attachedmediaitems .media-picker .media-selected_object_list li .name {
      overflow: hidden;
      height: 28px;
    }
    
    .media-attachedmediaitems .media-picker .media-available_object_list li img,
    .media-attachedmediaitems .media-picker .media-selected_object_list li img {
      display: block;
      position: absolute;
      top: 9px;
      left: 0;
    }
    
    .media-attachedmediaitems .media-picker .media-available_object_list li.image img,
    .media-attachedmediaitems .media-picker .media-selected_object_list li.image img {
      height: 45px;
      width: 60px;
    }
/* ... */

